made some changes in footer metadata

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <footer>
             <div class="footer__container">
                 <div class="metadata">
-                    <p>Designed & Built by Anne Joseph</p>
+                    <p>Designed & Built from scratch by Anne Joseph</p>
                 </div>
                 <div class="social-list">
                     <a class="social-list__link" href="https://codepen.io">
