Added hamburger button for small screens

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                         <a href="img/resume.pdf" class="nav__resumeButton">Resume</a>
                     </div>
             </nav>
+            <!-- hamburger button for small screen sizes -->
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
         </header>
         <div class="side_styleContainer">
             <div class="email_linkWrapper">
