--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                     </ol>
                     <div class="nav__resume">
-                        <a href="img/resume.pdf" class="nav__resumeButton">Resume</a>
+                        <a href="img/resume.pdf" target="_blank" class="nav__resumeButton">Resume</a>
                     </div>
             </nav>
             <!-- hamburger button for small screen sizes -->
