--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="img/hibiscus.png" alt="Anne's brand logo">
+                <img src="img/logo.png" alt="Anne's brand logo">
                 <a href="#home"></a>
             </div>
             <nav class="nav">
