modified right side email container

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </header>
         <div class="side_styleContainer">
             <div class="email_linkWrapper">
-                <a href="mailto:annejoseph287@gmail.com">annejoseph287@gmail.com</a>
+                <a href="mailto:annejoseph287@gmail.com" class="link">annejoseph287@gmail.com</a>
             </div>
         </div>
         <div class="main-container">
