Updated social links

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                     <p>Designed & Built from scratch by Anne Joseph</p>
                 </div>
                 <div class="social-list">
-                    <a class="social-list__link" href="https://codepen.io">
+                    <a class="social-list__link" href="https://codepen.io/AnneJ7">
                         <i class="fab fa-codepen"></i>
                     </a>
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/AnneJ17">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
