deleted unwanted links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Anne Joseph | Software Developer</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-              integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-
-        <!-- Update these with your own fonts -->
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
-
         <link rel="stylesheet" href="css/style.css">
-
-
     </head>
     <body>
         <header>
@@ -56,13 +48,13 @@
         <div class="main-container">
             <!-- Introduction -->
             <section class="intro" id="home">
-                <h1 class="section__title section__title--intro">
+                <h1 class="section__title--intro">
                     Hi, my name is
                 </h1>
-                <h2 class="section__title section__title--name">
+                <h2 class="section__title--name">
                     Anne Joseph.
                 </h2>
-                <h3 class="section__title section__title--passion">
+                <h3 class="section__title--passion">
                     I tinker with things unseen.
                 </h3>
                 <p>
