created project section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a href="#experiences" class="nav__link">Experience</a>
                         </li>
                         <li>
-                            <a href="#" class="nav__link">Projects</a>
+                            <a href="#project" class="nav__link">Projects</a>
                         </li>
                         <li>
                             <a href="#contact" class="nav__link">Contact</a>
@@ -167,6 +167,15 @@
             </section>
 
             <!-- Projects -->
+            <section class="my-projects" id="project">
+                <h3 class="section__title section__title--projects">Creative Projects</h3>
+                <div class="portfolio">
+                    <a href="https://grizzly-hacks.web.app/home" class="portfolio__item">
+                        <img src="img/grizzly_hacks.png" target="_blank">
+                    </a>
+                </div>
+
+            </section>
 
             <!-- Contact -->
             <section class="my-contact" id="contact">
