--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
                 <h3 class="section__title section__title--about">About Me</h3>
                 <div class="about-flexbox">
                     <div class="about">
-                        <p>Hello, I am Anne Joseph, a software developer based in Atlanta, GA.</p>
-                        <p>I am a self-motivated learner who taught herself how to code in C++,
-                            Python, JavaScript, HTML/CSS and more from scratch. I enjoy tackling
-                            new tasks and learning new skills.</p>
-                        <p>Apart from developing software, I create both static
-                            website and dynamic web application.I also develop Android mobile
-                            application. As Java is the first language I learnt, I am proficient
-                            in Java and Android Studio.</p>
+                        <p>Ciao! I am Anne Joseph, an Android Developer based in Dubai.</p>
+                        <p>With a passion for coding and self-motivation, I taught myself C++, 
+                            Python, JavaScript, and HTML/CSS from scratch and more from scratch. 
+                            I enjoy tackling new tasks and learning new skills.</p>
+                        <p>In addition to mobile app development, I create both static websites 
+                            and dynamic web applications. I thrive on tackling new challenges and 
+                            continuously expanding my skill set.</p>
                         <p>Here are few technologies I've been working with recently:</p>
                         <ul class="section__subtitle section__subtitle--container--skills">
+                            <li class="about-skill">Kotlin</li>
+                            <li class="about-skill">Java</li>
                             <li class="about-skill">C++</li>
                             <li class="about-skill">Docker</li>
                             <li class="about-skill">JavaScript</li>
@@ -91,7 +92,7 @@
                         </ul>
                     </div>
                     <div class="image-holder">
-                        <img src="img/leaf.jpeg" alt="a picture of Anne Joseph" class="about__img">
+                        <img src="img/anne_roji.jpg" alt="a picture of Anne Joseph" class="about__img">
                     </div>
                 </div>
             </section>
