--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     I tinker with things unseen.
                 </h3>
                 <p>
-                    I'm a software developer based in Atlanta, GA specialized in building softwares, exceptional websites,
-                    applications, and everything in between.
+                    I am an Android developer based in Dubai. I specialize in creating 
+                    mobile applications, software solutions, and everything in between.
                 </p>
                 <div class="email">
-                    <a href="mailto:annejoseph287@gmail.com">Get In Touch</a>
+                    <a href="mailto:annj8171@gmail.com">Get In Touch</a>
                 </div>
 
             </section>
