Give fixed size for photo

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         </ul>
                     </div>
                     <div class="image-holder">
-                        <img src="img/anne_roji.jpg" alt="a picture of Anne Joseph" class="about__img">
-                    </div>
+                        <img src="img/anne_roji.jpg" alt="Anne Joseph" class="about__img" style="width: 200px; height: auto;">
+                    </div>                    
                 </div>
             </section>
 
