Update work experience section

--- a/index.html
+++ b/index.html
@@ -104,64 +104,80 @@
                 <div class="tabs">
                     <div class="tab-header">
                         <div class="active">
-                            Digital Media Studio
+                            Concept Reply
                         </div>
                         <div>
-                            New Student Connection
+                            Fifth Third Bank
                         </div>
                         <div>
-                            STEM Academy
+                            Orlando Studios
+                        </div>
+                        <div>
+                            The Church of LDS
                         </div>
                     </div>
                     <div class="tab-indicator"></div>
                     <div class="tab-content">
                         <div class="active">
-                            <h4>Student Lab Assistant</h4>
-                            <h5>Aug 2018 - Present</h5>
+                            <h4>Senior Consultant</h4>
+                            <h5>Jun 2022 - Apr 2024</h5>
                             <ul class="section__subtitle section__subtitle--container">
-                                <li>
-                                    Check-in and out items using Microsoft Power Automate, and keeping an updated manual
-                                </li>
-                                <li>
-                                    Install and update tools for lab computers plus Hardware/software troubleshooting
-                                </li>
-                                <li>
-                                    Print out 3D objects for faculty for discerning visually, and for research purposes
-                                </li>
-                                <li>
-                                    Assist students in operating lab electronics, and orient them about existing equipment in the lab
-                                </li>
+                                <li>Key contributor to Stellantis' Global Mobile App (GMA), ensuring functionality and user satisfaction.</li>
+                                <li>Analyzed and resolved complex issues using AWS services and ticket management tools, enhancing user satisfaction.</li>
+                                <li>Developed the enrollment flow feature, improving user onboarding.</li>
+                                <li>Debugged wearables issues, ensuring optimal performance and user experience.</li>
+                                <li>Conducted regional and brand-specific testing, managed code fixes, and maintained quality standards.</li>
+                                <li>Worked in an agile environment with product managers, UX designers, QA testers, and engineers.</li>
                             </ul>
+                            <p><b>Skills</b>: App Development, AWS, Technical Support, Debugging, Quality Assurance, Agile Methodologies, Cross-functional Collaboration.</p>
                         </div>
                         <div>
-                            <h4>Student Orientation Assistant (seasonal)</h4>
+                            <h4>Android Engineer</h4>
                             <h5>May 2017 - Aug 2019</h5>
-                            <ul class="section__subtitle section__subtitle--container">
-                                <li>
-                                    Assisted in the organization and preparation of orientation activities
-                                </li>
-                                <li>
-                                    Assisted with the class registration process using Student Administration System
-                                </li>
-                                <li>
-                                    Offered information regarding academic policies and procedures, and all other aspects of life at GGC
-                                </li>
+                            <ul class="section__subtitle section__subtitle--container"> 
+                                <li>Developed new features including goal flow, transactions, and smart savings in a multi-module app</li>
+                                <li>Introduced and educated seven teams on Coroutines and Kotlin flows, enhancing app performance and responsiveness</li>
+                                <li>Contributed to over four major feature modules, as well as design and utility libraries</li>
+                                <li>Encouraged the implementation of Hilt for a testable and clean codebase; integrated tools like SonarQube and JaCoCo for maintainability. Reviewed 2-3 pull requests daily to maintain code quality</li>
+                                <li>Mentored junior developers and provided technical leadership across engineering teams.</li>
+                                <li>Worked with Gradle build systems to automate tasks and configure jobs and pipelines using YAML files</li>
+                                <li>Debugged and optimized code for robustness and scalability</li>
+                                <li>Followed the MVVM design pattern for decoupled, reusable code</li>
+                                <li>Performed unit testing with JUnit and Mockito; UI testing with Robolectric.</li>
+                                <li>Worked closely with UI/UX designers to create intuitive designs</li>
                             </ul>
+                            <p><b>Skills</b>: Android Development, Kotlin, Coroutines, MVVM, Hilt, Gradle, SonarQube, JaCoCo, JUnit, Mockito, Robolectric, Agile Methodologies, Technical Mentorship, Cross-functional Collaboration.</p>
                         </div>
                         <div>
-                            <h4>Student Assistant (seasonal)</h4>
-                            <h5>June 2017 - June 2018</h5>
+                            <h4>Android Developer (contract)</h4>
+                            <h5>Jul 2021 - Sep 2021</h5>
                             <ul class="section__subtitle section__subtitle--container">
-                                <li>
-                                    Summer outreach program for rising 6th-8th graders and high school students
-                                </li>
-                                <li>
-                                    Monitored Tech Camp students with laboratory exercises such as Adobe Illustrator and Photoshop
-                                </li>
-                                <li>
-                                    Assisted MIA (Mathematics In Action) Scholar Program students with mathematics and related activities
-                                </li>
+                                <li>Handled Salesforce push notifications, in-app messages, and deep-links</li>
+                                <li>Utilized Retrofit for consuming RESTful services and stored data using Room database</li>
+                                <li>Inspected and modified data midstream using Charles Proxy; extensively used logcat and Android debugger for issue resolution</li>
+                                <li>Modularized the application into feature and core frameworks following the MVVM architectural pattern</li>
+                                <li>Participated in code reviews, daily standups, product demos, and sprint retrospectives</li>
+                                <li>Used JIRA for project tracking and uBuild for building, testing, and deploying software</li>
                             </ul>
+                            <p><b>Skills</b>: Android Development, Salesforce Integration, Retrofit, Room Database, Charles Proxy, MVVM, Logcat, Debugging, JIRA, uBuild, Agile Methodologies, Cross-functional Collaboration</p>
+                        </div>
+                        <div>
+                            <h4>Android Developer (contract)</h4>
+                            <h5>Feb 2021 - Jun 2021</h5>
+                            <ul class="section__subtitle section__subtitle--container">
+                                <li>Led the entire development lifecycle from conceptualization to release within a 3-month timeframe</li>
+                                <li>Enhanced app performance by utilizing Kotlin flows for disk operations</li>
+                                <li>Achieved persistent file downloads using WorkManager, an Android Jetpack component</li>
+                                <li>Implemented custom bottom navigation, custom views for media players, and animations</li>
+                                <li>Designed screens to support both portrait and landscape orientations, accommodating different screen sizes and densities</li>
+                                <li>Prepopulated Room database at initialization with prepackaged files and handled migrations</li>
+                                <li>Extensively used Coil library for caching and downloading images from the server.</li>
+                                <li>Used Hilt for dependency injection, resulting in loosely coupled, testable, and reusable code</li>
+                                <li>Followed MVVM design pattern using ViewModel, Kotlin flow, coroutines, and view binding</li>
+                                <li>Performed Agile ceremonies to ensure project completion</li>
+                                <li>Used JIRA for project tracking and Jenkins for building, testing, and deploying the software</li>
+                            </ul>
+                            <p><b>Skills</b>: Android Development, Kotlin, WorkManager, Custom UI Components, Room Database, Coil Library, Hilt, MVVM, Agile Methodologies, JIRA, Jenkins, Cross-functional Collaboration</p>
                         </div>
                     </div>
                 </div>
