Fix experience layout issue

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
                                 <li>Conducted regional and brand-specific testing, managed code fixes, and maintained quality standards.</li>
                                 <li>Worked in an agile environment with product managers, UX designers, QA testers, and engineers.</li>
                             </ul>
-                            <p><b>Skills</b>: App Development, AWS, Technical Support, Debugging, Quality Assurance, Agile Methodologies, Cross-functional Collaboration.</p>
+                            <p><b>Skills</b>: App Development, AWS, Technical Support, Debugging, Quality Assurance, Agile Methodologies, 
+                                Cross-functional Collaboration.
+                            </p>
                         </div>
                         <div>
                             <h4>Android Engineer</h4>
@@ -138,7 +140,8 @@
                                 <li>Developed new features including goal flow, transactions, and smart savings in a multi-module app</li>
                                 <li>Introduced and educated seven teams on Coroutines and Kotlin flows, enhancing app performance and responsiveness</li>
                                 <li>Contributed to over four major feature modules, as well as design and utility libraries</li>
-                                <li>Encouraged the implementation of Hilt for a testable and clean codebase; integrated tools like SonarQube and JaCoCo for maintainability. Reviewed 2-3 pull requests daily to maintain code quality</li>
+                                <li>Encouraged the implementation of Hilt for a testable and clean codebase; integrated tools like SonarQube 
+                                    and JaCoCo for maintainability. Reviewed 2-3 pull requests daily to maintain code quality</li>
                                 <li>Mentored junior developers and provided technical leadership across engineering teams.</li>
                                 <li>Worked with Gradle build systems to automate tasks and configure jobs and pipelines using YAML files</li>
                                 <li>Debugged and optimized code for robustness and scalability</li>
@@ -146,7 +149,9 @@
                                 <li>Performed unit testing with JUnit and Mockito; UI testing with Robolectric.</li>
                                 <li>Worked closely with UI/UX designers to create intuitive designs</li>
                             </ul>
-                            <p><b>Skills</b>: Android Development, Kotlin, Coroutines, MVVM, Hilt, Gradle, SonarQube, JaCoCo, JUnit, Mockito, Robolectric, Agile Methodologies, Technical Mentorship, Cross-functional Collaboration.</p>
+                            <p><b>Skills</b>: Android Development, Kotlin, Coroutines, MVVM, Hilt, Gradle, SonarQube, JaCoCo, JUnit, 
+                                Mockito, Robolectric, Agile Methodologies, Technical Mentorship, Cross-functional Collaboration.
+                            </p>
                         </div>
                         <div>
                             <h4>Android Developer (contract)</h4>
@@ -154,12 +159,15 @@
                             <ul class="section__subtitle section__subtitle--container">
                                 <li>Handled Salesforce push notifications, in-app messages, and deep-links</li>
                                 <li>Utilized Retrofit for consuming RESTful services and stored data using Room database</li>
-                                <li>Inspected and modified data midstream using Charles Proxy; extensively used logcat and Android debugger for issue resolution</li>
+                                <li>Inspected and modified data midstream using Charles Proxy; extensively used logcat and 
+                                    Android debugger for issue resolution</li>
                                 <li>Modularized the application into feature and core frameworks following the MVVM architectural pattern</li>
                                 <li>Participated in code reviews, daily standups, product demos, and sprint retrospectives</li>
                                 <li>Used JIRA for project tracking and uBuild for building, testing, and deploying software</li>
                             </ul>
-                            <p><b>Skills</b>: Android Development, Salesforce Integration, Retrofit, Room Database, Charles Proxy, MVVM, Logcat, Debugging, JIRA, uBuild, Agile Methodologies, Cross-functional Collaboration</p>
+                            <p><b>Skills</b>: Android Development, Salesforce Integration, Retrofit, Room Database, Charles 
+                                Proxy, MVVM, Logcat, Debugging, JIRA, uBuild, Agile Methodologies, Cross-functional Collaboration
+                            </p>
                         </div>
                         <div>
                             <h4>Android Developer (contract)</h4>
@@ -169,15 +177,18 @@
                                 <li>Enhanced app performance by utilizing Kotlin flows for disk operations</li>
                                 <li>Achieved persistent file downloads using WorkManager, an Android Jetpack component</li>
                                 <li>Implemented custom bottom navigation, custom views for media players, and animations</li>
-                                <li>Designed screens to support both portrait and landscape orientations, accommodating different screen sizes and densities</li>
+                                <li>Designed screens to support both portrait and landscape orientations, accommodating different 
+                                    screen sizes and densities</li>
                                 <li>Prepopulated Room database at initialization with prepackaged files and handled migrations</li>
-                                <li>Extensively used Coil library for caching and downloading images from the server.</li>
+                                <li>Extensively used Coil library for caching and downloading images from the server</li>
                                 <li>Used Hilt for dependency injection, resulting in loosely coupled, testable, and reusable code</li>
                                 <li>Followed MVVM design pattern using ViewModel, Kotlin flow, coroutines, and view binding</li>
                                 <li>Performed Agile ceremonies to ensure project completion</li>
                                 <li>Used JIRA for project tracking and Jenkins for building, testing, and deploying the software</li>
                             </ul>
-                            <p><b>Skills</b>: Android Development, Kotlin, WorkManager, Custom UI Components, Room Database, Coil Library, Hilt, MVVM, Agile Methodologies, JIRA, Jenkins, Cross-functional Collaboration</p>
+                            <p><b>Skills</b>: Android Development, Kotlin, WorkManager, Custom UI Components, Room Database, 
+                                Coil Library, Hilt, MVVM, Agile Methodologies, JIRA, Jenkins, Cross-functional Collaboration
+                            </p>
                         </div>
                     </div>
                 </div>
