Update contact info

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
             <section class="my-contact" id="contact">
                 <h3 class="section__title section__title--contact">Get In Touch</h3>
                 <div class="contact-info">
-                    <p>Are you looking for a software, mobile or web developer for your next project?</p>
+                    <p>Are you looking for an Android Developer for your next project?</p>
                     <p>My inbox is always open, whether you have a question or just want to say hi.
                         I am currently available for contract or full-time work. Pick my brain and let's get
                         started on your project.</p>
                 </div>
                 <div class="contact-btn">
-                    <a href="mailto:annejoseph287@gmail.com">Say Hello</a>
+                    <a href="mailto:annj8171@gmail.com">Say Hello</a>
                 </div>
 
             </section>
