Update email address

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
         <div class="side_styleContainer">
             <div class="email_linkWrapper">
-                <a href="mailto:annejoseph287@gmail.com" class="link">annejoseph287@gmail.com</a>
+                <a href="mailto:annj8171@gmail.com" class="link">annj8171@gmail.com</a>
             </div>
         </div>
         <div class="main-container">
