--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             Fifth Third Bank
                         </div>
                         <div>
-                            Orlando Studios
+                            Universal Studios
                         </div>
                         <div>
                             The Church of LDS
@@ -119,7 +119,12 @@
                     <div class="tab-indicator"></div>
                     <div class="tab-content">
                         <div class="active">
-                            <h4>Senior Consultant</h4>
+                            <div class="job-header">
+                                <h4>Senior Consultant</h4>
+                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                    <img src="img/jeep.png" target="_blank">
+                                </a>
+                            </div>
                             <h5>Jun 2022 - Apr 2024</h5>
                             <ul class="section__subtitle section__subtitle--container">
                                 <li>Key contributor to Stellantis' Global Mobile App (GMA), ensuring functionality and user satisfaction.</li>
@@ -134,7 +139,12 @@
                             </p>
                         </div>
                         <div>
-                            <h4>Android Engineer</h4>
+                            <div class="job-header">
+                                <h4>Android Engineer</h4>
+                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                    <img src="img/fifth_third_logo.png" target="_blank">
+                                </a>
+                            </div>
                             <h5>May 2017 - Aug 2019</h5>
                             <ul class="section__subtitle section__subtitle--container"> 
                                 <li>Developed new features including goal flow, transactions, and smart savings in a multi-module app</li>
@@ -154,7 +164,12 @@
                             </p>
                         </div>
                         <div>
-                            <h4>Android Developer (contract)</h4>
+                            <div class="job-header">
+                                <h4>Android Developer (contract)</h4>
+                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                    <img src="img/universal_studios.png" target="_blank">
+                                </a>
+                            </div>
                             <h5>Jul 2021 - Sep 2021</h5>
                             <ul class="section__subtitle section__subtitle--container">
                                 <li>Handled Salesforce push notifications, in-app messages, and deep-links</li>
@@ -170,7 +185,12 @@
                             </p>
                         </div>
                         <div>
-                            <h4>Android Developer (contract)</h4>
+                            <div class="job-header">
+                                <h4>Android Developer (contract)</h4>
+                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                    <img src="img/gospel_for_kids.png" target="_blank">
+                                </a>
+                            </div>
                             <h5>Feb 2021 - Jun 2021</h5>
                             <ul class="section__subtitle section__subtitle--container">
                                 <li>Led the entire development lifecycle from conceptualization to release within a 3-month timeframe</li>
