Update Google Play Store links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="active">
                             <div class="job-header">
                                 <h4>Senior Consultant</h4>
-                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                <a href="https://play.google.com/store/apps/details?id=com.fca.myconnect.nafta" class="job-image" alt="Job Image">
                                     <img src="img/jeep.png" target="_blank">
                                 </a>
                             </div>
@@ -141,7 +141,7 @@
                         <div>
                             <div class="job-header">
                                 <h4>Android Engineer</h4>
-                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                <a href="https://play.google.com/store/apps/details?id=com.clairmail.fth" class="job-image" alt="Job Image">
                                     <img src="img/fifth_third_logo.png" target="_blank">
                                 </a>
                             </div>
@@ -166,7 +166,7 @@
                         <div>
                             <div class="job-header">
                                 <h4>Android Developer (contract)</h4>
-                                <a href="https://play.google.com/store/apps/details?id=org.lds.gospelforkids" class="job-image" alt="Job Image">
+                                <a href="https://play.google.com/store/apps/details?id=com.universalstudios.orlandoresort" class="job-image" alt="Job Image">
                                     <img src="img/universal_studios.png" target="_blank">
                                 </a>
                             </div>
